Template was displaying first name twice.

--- a/shibboleth/templates/shibboleth/user_info.html
+++ b/shibboleth/templates/shibboleth/user_info.html
@@ -8,7 +8,7 @@
       <p>The mapped shib attributes will display here.</p>
       <ul>
           <li>username: {{ user.username }}</li>
-          <li>name: {{ user.first_name }} {{ user.first_name }}</li>
+          <li>name: {{ user.first_name }} {{ user.last_name }}</li>
           <li>email: {{ user.email }}</li>
       </ul>
     </div> 
